--- a/scss/marshall.scss
+++ b/scss/marshall.scss
@@ -99,7 +99,13 @@ select {
 }
 
 .general-padding {
-    padding: 15px;
+    padding: 15px 0;
+}
+
+.mobile {
+    .general-padding {
+        padding: 15px;
+    }
 }
 
 /* site */
@@ -1432,7 +1438,7 @@ h1 a {
 /* ================================================ */
 #config_machine {
     .step {
-        background: url("../images/heading-pre.png") top left no-repeat #001649;
+        background: url("../images/heading-pre.png") top left no-repeat #01205a;
         padding-left: 49px;
         height: 40px;
         line-height: 40px;
@@ -1507,9 +1513,9 @@ h1 a {
 
         .empty-configuration {
             width: 100%;
-            height: 111px;
+            height: 130px;
             padding: 0;
-            background: url("../images/select_config.jpg") 510px 0 no-repeat;
+            background: url("../images/select_config.jpg") 500px bottom no-repeat;
 
             h3 {
                 display: none;
@@ -1518,6 +1524,7 @@ h1 a {
 
         .configure-content {
             min-height: 240px;
+            width: 960px;
 
         }
 
@@ -1598,14 +1605,13 @@ h1 a {
 
 #config_machine {
     .add-options {
-        width: 177px;
+        width: 188px;
         height: 43px;
         background: url("../images/options-btn.png") 0 0 no-repeat;
         text-decoration: none;
         text-indent: -9000px;
         display: block;
         float: right;
-        margin-top: -3px;
 
         &:hover {
             background-position: bottom left;
@@ -1617,34 +1623,111 @@ h1 a {
 
 /* step n */
 /* show and hide */
-#config_machine .mainbox .show-hide {
-    text-decoration: none;
-    float: right;
-    margin-right: 10px;
-    cursor: pointer;
+.mobile {
+    #config_machine {
+        .mainbox {
+            .show-hide {
+                text-decoration: none;
+                float: right;
+                margin-right: 10px;
+                cursor: pointer;
+
+                span {
+                    font-size: 18px;
+                    display: inline-block;
+                    padding-left: 10px;
+                    color: #ececec;
+                    font-weight: normal;
+
+                    span {
+                        color: #ffffff;
+
+                    }
+
+                    &.divider {
+                        display: none;
+                    }
+                }
+            }
+
+            &.open {
+                .body {
+                    display: block;
+                }
+
+                .show {
+                    display: none;
+                }
+            }
+
+            &.closed {
+                .hide {
+                    display: none;
+                }
+                .body {
+                    display: none;
+                }
+            }
+        }
+    }
 }
 
-#config_machine .mainbox .show-hide span {
-    color: #ececec;
-    font-weight: normal;
+.desktop {
+    #config_machine {
+        .step {
+            overflow: visible;
+        }
+        .mainbox {
+            .show-hide {
+                text-decoration: none;
+                float: right;
+                margin-right: 10px;
+                background: url("../images/heading-down.png") center 40px no-repeat;
+                padding-bottom: 15px;
+
+                span {
+                    display: inline-block;
+                    color: #706b6b;
+                    font-weight: bold;
+                    font-size: 14px !important;
+                }
+
+                .fa {
+                    display:  none;
+                }
+            }
+            .body {
+                float: left;
+            }
+            &.open {
+                .show-hide {
+                    .hide {
+                        .text {
+                            color: #fff !important;
+                            cursor: pointer;
+                        }
+                    }
+                }
+            }
+            &.closed {
+                .show-hide {
+                    .show {
+                        .text {
+                            color: #fff !important;
+                            cursor: pointer;
+                        }
+                    }
+                }
+            }
+            &.can-hide {
+                margin-bottom: 6px;
+            }
+        }
+    }
 }
 
-#config_machine .mainbox .show-hide span span {
-    color: #ffffff;
-}
 
-#config_machine .mainbox.open .body {
-    display: block;
-}
 
-#config_machine .mainbox.open .show,
-#config_machine .mainbox.closed .hide {
-    display: none;
-}
-
-#config_machine .mainbox.closed .body {
-    display: none;
-}
 
 /* step 2 */
 /* Configure options, responsive using JS */
@@ -1656,11 +1739,21 @@ h1 a {
     float: left;
 }
 
+.desktop {
+    #config_machine {
+        .options {
+            width: 960px;
+        }
+    }
+}
+
+
+
 #config_machine .options li {
     float: left;
     width: 33.33%;
     background-color: #fff;
-    margin-bottom: 15px;
+    margin-top: 15px;
     outline: none;
     cursor: pointer;
 }
@@ -1707,14 +1800,27 @@ h1 a {
     padding: 8px 10px;
     background-color: #dcdcdc;
     font-size: 1.1em;
-    text-shadow: 0px 1px 0px rgba(255,255,255,0.5);
     overflow: hidden;
-
+    text-overflow: ellipsis;
     -webkit-transition: background 0.5s;
     -moz-transition: background 0.5s;
     -o-transition: background 0.5s;
     transition: background 0.5s;
 }
+
+.mobile {
+    #config_machine {
+        .options {
+            li {
+                h3 {
+                    text-shadow: 0px 1px 0px rgba(255,255,255,0.5);
+                }
+            }
+        }
+    }
+}
+
+
 
 #config_machine .options li .col {
     float: left;
@@ -1763,45 +1869,55 @@ h1 a {
 }
 
 /* single column styles */
-#config_machine .options.single-column li {
-    float: none;
-    width: 100%;
-    margin-right: 0;
-}
+#config_machine {
+    .options {
+        &.single-column {
+            li {
+                float: none !important;
+                width: 100% !important;
+                margin-right: 0 !important;
 
-#config_machine .options.single-column li .col.right {
-    float: left;
-    width: 100%;
-    margin-left: -155px;
-    height: inherit;
-}
+                .col {
+                    &.right {
+                        float: left;
+                        width: 100%;
+                        margin-left: -155px;
+                        height: inherit;
 
-#config_machine .options.single-column li .col.right p {
-    padding-right: 15px;
-}
+                        p {
+                            padding-right: 15px;
+                        }
 
-#config_machine .options.single-column li .col.right * {
-    margin-left: 155px;
-}
+                        * {
+                            margin-left: 155px;
+                        }
+                    }
 
-#config_machine .options.single-column li .col.left {
-    width: 155px;
-    height: inherit;
-}
+                    &.left {
+                        width: 155px;
+                        height: inherit;
 
-#config_machine .options.single-column li .col.left img {
-    width: 140px;
+                        img {
+                            width: 140px;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
-
 
 
 /* step 3 */
+
 #config_machine .basket table {
-    width: 100%;
-    margin-top: 2px;
-    border: 1px solid #ccc;
+    width: 960px;
+    margin-top: 20px;
     background: #fff;
 }
+
+
+
 
 #config_machine .basket table tr.even {
     background: #f2f2f2;
@@ -1815,7 +1931,6 @@ h1 a {
 
 #config_machine .basket th {
     padding: 10px 16px;
-    border-bottom: 1px solid #ccc;
 }
 
 #config_machine .basket td.image {
@@ -1833,43 +1948,113 @@ h1 a {
 }
 
 #config_machine .basket table thead {
-    background-color: #dcdcdc;
+    background-color: #d4d4d4;
     color: #444;
     font-size: 1.0em;
     padding: 4px 16px;
-    text-shadow: 0px 1px 0px rgba(255,255,255,0.5);
 }
 
 #config_machine .basket tfoot td {
-    border-top: 1px solid #ccc;
     padding: 16px 16px;
     font-weight: bold;
     background: #dcdcdc;
     color: #000000;
-    text-shadow: 0px 1px 0px rgba(255,255,255,0.5);
     font-size: 1.1em;
 }
 
-#config_machine .basket .body {
-    background-color: #fff;
+
+.mobile {
+    #config_machine {
+        .basket {
+            .body {
+                background-color: #fff;
+
+                table {
+                    width: 100%;
+                    margin-top: 2px;
+                    border: 1px solid #ccc;
+                    background: #fff;
+
+                    th {
+                        padding: 10px 16px;
+                        border-bottom: 1px solid #ccc;
+                    }
+
+                    thead {
+                        background-color: #dcdcdc;
+                        color: #444;
+                        font-size: 1.0em;
+                        padding: 4px 16px;
+                        text-shadow: 0px 1px 0px rgba(255,255,255,0.5);
+                    }
+                }
+
+                textarea {
+                    width: 100%;
+                    height: 120px;
+
+                }
+
+                label {
+                    font-size: 1.1em;
+                    font-weight: bold;
+                    padding-bottom: 10px;
+                    display: block;
+
+                }
+            }
+            tfoot {
+                td {
+                    border-top: 1px solid #ccc;
+                    padding: 16px 16px;
+                    font-weight: bold;
+                    background: #dcdcdc;
+                    color: #000000;
+                    text-shadow: 0px 1px 0px rgba(255,255,255,0.5);
+                    font-size: 1.1em;
+                }
+            }
+        }
+    }
 }
 
-#config_machine .basket .body label {
-    font-size: 1.1em;
-    font-weight: bold;
-    padding-bottom: 10px;
-    display: block;
+.desktop {
+    #config_machine .basket .body label {
+        display: none;
+    }
 }
+
 
 #config_machine .basket .body textarea {
-    width: 100%;
-    height: 120px;
+    width: 730px;
+    height: 180px;
 }
 
 /* step 4 */
-#config_machine .save-print-order .body {
-    background: #fff;
-    padding: 15px;
+.desktop {
+    #config_machine {
+        .save-print-order {
+            .body {
+                background: #fff;
+                padding: 15px;
+                width: 100%;
+                box-sizing: border-box;
+            }
+        }
+    }
+}
+
+
+
+.mobile {
+    #config_machine {
+        .save-print-order {
+            .body {
+                background: #fff;
+                padding: 15px;
+            }
+        }
+    }
 }
 
 #config_machine .save-print-order .body p {
@@ -3384,9 +3569,25 @@ h1 a {
         }
 
         /* configures steps */
-        #config_machine .step {
-            font-size: 1.2em;
+        #config_machine {
+            .step {
+                font-size: 1.2em;
+            }
+
+            .configure-content {
+                .content {
+                    h3 {
+                        margin-top: 10px;
+                    }
+                }
+            }
+
+            .add-options {
+                margin-top:  15px;
+                width: 167px;
+            }
         }
+
 
         #basket {
             top: 0;
