--- a/css/marshall.css
+++ b/css/marshall.css
@@ -31,9 +31,12 @@ img {
 
 select {
   margin: 0 0 15px;
-  font-weight: bold;
   width: 100%;
   color: #001848;
+}
+
+.mobile select {
+  font-weight: bold;
 }
 
 textarea,
@@ -1240,7 +1243,7 @@ h1 a {
   background: #fff;
   margin-bottom: 1px;
 }
-.mobile #config_machine label {
+.mobile #config_machine .configure-label {
   display: none;
 }
 .mobile #config_machine select {
@@ -1414,6 +1417,7 @@ h1 a {
 
 .desktop #config_machine .options {
   width: 960px;
+  margin-bottom: 15px;
 }
 
 #config_machine .options li {
@@ -1479,6 +1483,9 @@ h1 a {
 .mobile #config_machine .options li h3 {
   text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.5);
 }
+.mobile #config_machine .options li.selected h3 {
+  text-shadow: none;
+}
 
 #config_machine .options li .col {
   float: left;
@@ -1502,6 +1509,13 @@ h1 a {
   width: 90%;
   margin: 10px 5px 10px 10px;
   border: 1px solid #ccc;
+}
+
+.desktop #config_machine .options li .col.left img {
+  width: 150px;
+  height: 120px;
+  margin: 0 0 10px 0;
+  border: 0;
 }
 
 #config_machine .options li .col.left h4,
@@ -1590,6 +1604,7 @@ h1 a {
 #config_machine .basket table th {
   padding: 10px 16px;
   text-align: right;
+  font-size: 14px;
 }
 #config_machine .basket table th.name, #config_machine .basket table th.image {
   border-right: 1px solid #fff;
@@ -2181,70 +2196,76 @@ h1 a {
 
 #basket {
   position: absolute;
-  top: 0;
+  top: 176px;
   right: 0;
-  width: 38px;
-  margin-top: 176px;
-  border: 2px solid #bb1f1d;
-  color: #444;
-  -webkit-appearance: none;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  transition: all 0.75s ease;
-  background: #fff;
-  height: 97px;
+  width: 33px;
   overflow: hidden;
+  height: 172px;
+  -webkit-transition: all 250ms;
+  -moz-transition: all 250ms;
+  -o-transition: all 250ms;
+  transition: all 250ms;
 }
-
 #basket .container {
   position: absolute;
   top: 0;
   left: 0;
-  width: 164px;
+  width: 172px;
 }
-
 #basket .container:after {
   content: "";
   clear: both;
   display: block;
 }
-
-#basket.stick-out {
-  width: 168px;
-  transition: all 0.5s ease;
-}
-
-#basket .show-hide {
+#basket .container .show-hide {
   float: left;
-  width: 38px;
-  height: 93px;
+  width: 35px;
+  height: 96px;
   background: url("../images/your-marshall.png") top left no-repeat #bb1f1d;
   text-indent: -9000px;
 }
-
-#basket .summary-box {
+#basket .container .summary-box {
   background: #fff;
-  padding-bottom: 8px;
   float: left;
-  width: 126px;
+  width: 134px;
+  border-left: 3px solid #bb1f1d;
 }
-
-#basket .summary-box h3 {
+#basket .container .summary-box h3 {
   background: #bb1f1d;
   color: #fff;
-  padding: 5px 10px;
+  padding: 7px 9px;
+  font-size: 14px;
 }
-
-#basket .summary-box .detail {
-  padding: 5px 10px;
-  font-size: 1.1em;
-  line-height: 140%;
-  min-height: 50px;
+#basket .container .summary-box .detail {
+  padding: 8px;
+  font-size: 13px;
+  line-height: 130%;
+  min-height: 47px;
+  border-bottom: 3px solid #bb1f1d;
+  font-weight: bold;
+  color: #444;
 }
-
-#basket .summary-box strong {
+#basket .container .summary-box strong {
   color: #000;
+  display: block;
+  font-size: 15px;
+  color: #000;
+}
+#basket .container .summary-box img {
+  padding: 5px 0 0 0;
+  display: block;
+}
+
+#basket.stick-out {
+  width: 172px;
+  -webkit-transition: all 250ms;
+  -moz-transition: all 250ms;
+  -o-transition: all 250ms;
+  transition: all 250ms;
+}
+#basket.stick-out .container .show-hide {
+  width: 35px;
+  background: url("../images/your-marshall.png") top right no-repeat #bb1f1d;
 }
 
 .mobile {
@@ -2650,12 +2671,15 @@ h1 a {
     font-size: 1.2em;
     padding-left: 46px;
   }
-  .mobile #config_machine .step > span,
-  .mobile #config_machine .step span.text {
+  .mobile #config_machine .step > span {
+    display: none;
+  }
+  .mobile #config_machine .step span .text {
     display: none;
   }
   .mobile #config_machine .step span.fa {
     font-size: 1.3em;
+    padding-left: 0;
   }
   .mobile #config_machine .basket table td.image,
   .mobile #config_machine .basket table th.image {
