--- a/scss/marshall.scss
+++ b/scss/marshall.scss
@@ -68,9 +68,13 @@ img {
 
 select {
     margin: 0 0 15px;
-    font-weight: bold;
     width: 100%;
     color: #001848;
+}
+.mobile {
+    select {
+        font-weight: bold;
+    }
 }
 
 textarea,
@@ -1464,11 +1468,6 @@ h1 a {
     }
 }
 
-
-#config_machine .body {
-
-}
-
 /* step 1 */
 .desktop {
     #config_machine {
@@ -1507,7 +1506,7 @@ h1 a {
             background: #fff;
             margin-bottom: 1px;
         }
-        label {
+        .configure-label {
             display: none;
         }
         select {
@@ -1521,7 +1520,6 @@ h1 a {
 
 .desktop {
     #config_machine {
-
         .empty-configuration {
             width: 100%;
             height: 130px;
@@ -1536,12 +1534,8 @@ h1 a {
         .configure-content {
             min-height: 240px;
             width: 960px;
-
         }
-
     }
-
-
 }
 
 .mobile {
@@ -1755,6 +1749,7 @@ h1 a {
     #config_machine {
         .options {
             width: 960px;
+            margin-bottom: 15px;
         }
     }
 }
@@ -1827,6 +1822,11 @@ h1 a {
                 h3 {
                     text-shadow: 0px 1px 0px rgba(255,255,255,0.5);
                 }
+                &.selected {
+                    h3 {
+                        text-shadow: none;
+                    }
+                }
             }
         }
     }
@@ -1856,6 +1856,25 @@ h1 a {
     width: 90%;
     margin: 10px 5px 10px 10px;
     border: 1px solid #ccc;
+}
+
+.desktop {
+    #config_machine {
+        .options {
+            li {
+                .col {
+                    &.left {
+                        img {
+                            width: 150px;
+                            height: 120px;
+                            margin: 0 0 10px 0;
+                            border: 0;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 
 
@@ -1976,6 +1995,7 @@ h1 a {
             th {
                 padding: 10px 16px;
                 text-align: right;
+                font-size: 14px;
 
                 &.name,
                 &.image {
@@ -2718,69 +2738,90 @@ h1 a {
 
 #basket {
     position: absolute;
-    top: 0;
+    top: 176px;
     right: 0;
-    width: 38px;
-    margin-top: 176px;
-    border: 2px solid $red;
-    color: #444;
-    -webkit-appearance: none;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    transition: all 0.75s ease;
-    background: #fff;
-    height: 97px;
+    width: 33px;
     overflow: hidden;
+    height: 172px;
+
+    -webkit-transition: all 250ms;
+    -moz-transition: all 250ms;
+    -o-transition: all 250ms;
+    transition: all 250ms;
+
+    .container {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 172px;
+
+        &:after {
+            @include clearfix;
+        }
+
+        .show-hide {
+            float: left;
+            width: 35px;
+            height: 96px;
+            background: url("../images/your-marshall.png") top left no-repeat $red;
+            text-indent: -9000px;
+        }
+
+        .summary-box {
+            background: #fff;
+            float: left;
+            width: 134px;
+            border-left: 3px solid $red;
+
+            h3 {
+                background: $red;
+                color: #fff;
+                padding: 7px 9px;
+                font-size: 14px;
+            }
+
+            .detail {
+                padding: 8px;
+                font-size: 13px;
+                line-height: 130%;
+                min-height: 47px;
+                border-bottom: 3px solid $red;
+                font-weight: bold;
+                color: #444;
+            }
+
+            strong {
+                color: #000;
+                display: block;
+                font-size: 15px;
+                color: #000;
+            }
+
+            img {
+                padding: 5px 0 0 0;
+                display: block;
+            }
+        }
+    }
 }
 
-#basket .container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 164px;
-}
-
-#basket .container:after {
-    @include clearfix;
-}
 
 #basket.stick-out {
-    width: 168px;
-    transition: all 0.5s ease;
+    width: 172px;
+
+    -webkit-transition: all 250ms;
+    -moz-transition: all 250ms;
+    -o-transition: all 250ms;
+    transition: all 250ms;
+
+    .container {
+        .show-hide {
+            width: 35px;
+            background: url("../images/your-marshall.png") top right no-repeat $red;
+        }
+    }
 }
 
-#basket .show-hide {
-    float: left;
-    width: 38px;
-    height: 93px;
-    background: url("../images/your-marshall.png") top left no-repeat $red;
-    text-indent: -9000px;
-}
-
-#basket .summary-box {
-    background: #fff;
-    padding-bottom: 8px;
-    float: left;
-    width: 126px;
-}
-
-#basket .summary-box h3 {
-    background: $red;
-    color: #fff;
-    padding: 5px 10px;
-}
-
-#basket .summary-box .detail {
-    padding: 5px 10px;
-    font-size: 1.1em;
-    line-height: 140%;
-    min-height: 50px;
-}
-
-#basket .summary-box strong {
-    color: #000;
-}
 
 
 
@@ -3327,18 +3368,24 @@ h1 a {
         }
 
         /* configures steps */
-        #config_machine .step {
-            font-size: 1.2em;
-            padding-left: 46px;
-        }
+        #config_machine {
+            .step {
+                font-size: 1.2em;
+                padding-left: 46px;
 
-        #config_machine .step > span,
-        #config_machine .step span.text {
-            display: none;
-        }
-
-        #config_machine .step span.fa {
-            font-size: 1.3em;
+                > span {
+                    display: none;
+                }
+                span {
+                    .text {
+                        display: none;
+                    }
+                    &.fa {
+                        font-size: 1.3em;
+                        padding-left: 0;
+                    }
+                }
+            }
         }
 
         /* table styles */
