--- a/css/marshall.css
+++ b/css/marshall.css
@@ -2783,42 +2783,6 @@ h1 a {
     /* news detail */
     /* spares results */
     /* configures steps */
-    @-webkit-keyframes peakingBasket {
-      0% {
-        margin-top: -71px;
-      }
-
-      25% {
-        margin-top: 0;
-      }
-
-      75% {
-        margin-top: 0;
-      }
-
-      100% {
-        margin-top: -71px;
-      }
-}
-
-    @keyframes peakingBasket {
-      0% {
-        margin-top: -71px;
-      }
-
-      25% {
-        margin-top: 0;
-      }
-
-      75% {
-        margin-top: 0;
-      }
-
-      100% {
-        margin-top: -71px;
-      }
-}
-
   }
   .mobile .header,
   .mobile #mobile-nav .header {
@@ -3018,42 +2982,60 @@ h1 a {
     width: 167px;
   }
   .mobile #basket {
-    top: 0;
+    top: -76px;
     left: 0;
     bottom: 0;
     border: none;
-    background-color: #bb1f1d;
     width: 100%;
-    height: 71px;
-    margin-top: -71px;
+    height: 76px;
     position: fixed;
-    transition: margin 0.5s ease 0s;
-  }
-  .mobile #basket .summary-box h3 {
-    background: none repeat scroll 0 0 #bb1f1d;
-    color: #fff;
-    padding: 5px 10px;
-  }
-  .mobile #basket .summary-box {
-    float: none;
-    padding-bottom: 8px;
-    width: 100%;
+    overflow: inherit;
+    background: #fff;
+    -webkit-transition: top 250ms;
+    -moz-transition: top 250ms;
+    -o-transition: top 250ms;
+    transition: top 250ms;
+    -webkit-box-shadow: 0px 6px 5px -3px #575657;
+    -moz-box-shadow: 0px 6px 5px -3px #575657;
+    box-shadow: 0px 6px 5px -3px #575657;
   }
   .mobile #basket .container {
     width: 100%;
   }
+  .mobile #basket .container .summary-box {
+    float: none;
+    width: 100%;
+    border: none;
+  }
+  .mobile #basket .container .summary-box h3 {
+    background: #e4e4e4;
+    color: #000;
+    padding: 5px 10px;
+    margin: 5px 5px 0 5px;
+  }
+  .mobile #basket .container .summary-box .detail {
+    min-height: inherit;
+    border: 1px solid #ccc;
+    position: relative;
+    background: #fff;
+    margin: 5px;
+  }
+  .mobile #basket .container .summary-box .detail strong {
+    display: inline;
+  }
+  .mobile #basket .container .summary-box .detail img {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+  }
   .mobile #basket a {
     display: none;
   }
-  .mobile #basket .summary-box .detail {
-    min-height: inherit;
-    border: 5px solid #bb1f1d;
-  }
   .mobile #basket.stick-out {
-    width: 100%;
-  }
-  .mobile #basket.stick-out {
-    -webkit-animation: peakingBasket 3s normal ease-out;
-    animation: peakingBasket 3s normal ease-out;
+    top: 0;
+    -webkit-transition: top 250ms;
+    -moz-transition: top 250ms;
+    -o-transition: top 250ms;
+    transition: top 250ms;
   }
 }
