--- a/css/marshall.css
+++ b/css/marshall.css
@@ -2268,6 +2268,10 @@ h1 a {
   background: url("../images/your-marshall.png") top right no-repeat #bb1f1d;
 }
 
+.desktop #backToTop {
+  display: none;
+}
+
 .mobile {
   /* buttons, not used... yet */
   /* media queries */
@@ -2386,6 +2390,42 @@ h1 a {
 }
 .mobile .old-mobile .blue-link:active, .mobile .old-mobile .blue-link:hover {
   background: #0f82ff;
+}
+.mobile #backToTop {
+  left: 0;
+  bottom: -45px;
+  border: none;
+  width: 100%;
+  height: 45px;
+  position: fixed;
+  background: #666;
+  text-align: right;
+  -webkit-transition: bottom 250ms;
+  -moz-transition: bottom 250ms;
+  -o-transition: bottom 250ms;
+  transition: bottom 250ms;
+}
+.mobile #backToTop span {
+  color: #fff;
+  text-decoration: none;
+  padding: 6px 12px;
+  text-transform: uppercase;
+}
+.mobile #backToTop span .text {
+  display: inline-block;
+  vertical-align: middle;
+}
+.mobile #backToTop span span {
+  font-size: 1.9em;
+  font-weight: bold;
+  display: inline-block;
+}
+.mobile #backToTop.onScreen {
+  bottom: 0;
+  -webkit-transition: bottom 250ms;
+  -moz-transition: bottom 250ms;
+  -o-transition: bottom 250ms;
+  transition: bottom 250ms;
 }
 @media only screen and (max-width: 1000px) {
   .mobile {
@@ -2775,6 +2815,62 @@ h1 a {
   .mobile .container .tabs-content {
     display: none;
   }
+  .mobile #basket {
+    top: -76px;
+    left: 0;
+    border: none;
+    width: 100%;
+    height: 76px;
+    position: fixed;
+    overflow: inherit;
+    background: #fff;
+    -webkit-transition: top 250ms;
+    -moz-transition: top 250ms;
+    -o-transition: top 250ms;
+    transition: top 250ms;
+    -webkit-box-shadow: 0px 6px 5px -3px #575657;
+    -moz-box-shadow: 0px 6px 5px -3px #575657;
+    box-shadow: 0px 6px 5px -3px #575657;
+  }
+  .mobile #basket .container {
+    width: 100%;
+  }
+  .mobile #basket .container .summary-box {
+    float: none;
+    width: 100%;
+    border: none;
+  }
+  .mobile #basket .container .summary-box h3 {
+    background: #e4e4e4;
+    color: #000;
+    padding: 5px 10px;
+    margin: 5px 5px 0 5px;
+  }
+  .mobile #basket .container .summary-box .detail {
+    min-height: inherit;
+    border: 1px solid #ccc;
+    position: relative;
+    background: #fff;
+    margin: 5px;
+  }
+  .mobile #basket .container .summary-box .detail strong {
+    display: inline;
+  }
+  .mobile #basket .container .summary-box .detail img {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+  }
+  .mobile #basket a {
+    display: none;
+  }
+  .mobile #basket.stick-out {
+    top: 0;
+    -webkit-transition: top 250ms;
+    -moz-transition: top 250ms;
+    -o-transition: top 250ms;
+    transition: top 250ms;
+  }
 }
 @media only screen and (max-width: 400px) {
   .mobile {
@@ -2980,62 +3076,5 @@ h1 a {
   .mobile #config_machine .add-options {
     margin-top: 15px;
     width: 167px;
-  }
-  .mobile #basket {
-    top: -76px;
-    left: 0;
-    bottom: 0;
-    border: none;
-    width: 100%;
-    height: 76px;
-    position: fixed;
-    overflow: inherit;
-    background: #fff;
-    -webkit-transition: top 250ms;
-    -moz-transition: top 250ms;
-    -o-transition: top 250ms;
-    transition: top 250ms;
-    -webkit-box-shadow: 0px 6px 5px -3px #575657;
-    -moz-box-shadow: 0px 6px 5px -3px #575657;
-    box-shadow: 0px 6px 5px -3px #575657;
-  }
-  .mobile #basket .container {
-    width: 100%;
-  }
-  .mobile #basket .container .summary-box {
-    float: none;
-    width: 100%;
-    border: none;
-  }
-  .mobile #basket .container .summary-box h3 {
-    background: #e4e4e4;
-    color: #000;
-    padding: 5px 10px;
-    margin: 5px 5px 0 5px;
-  }
-  .mobile #basket .container .summary-box .detail {
-    min-height: inherit;
-    border: 1px solid #ccc;
-    position: relative;
-    background: #fff;
-    margin: 5px;
-  }
-  .mobile #basket .container .summary-box .detail strong {
-    display: inline;
-  }
-  .mobile #basket .container .summary-box .detail img {
-    position: absolute;
-    top: 5px;
-    right: 10px;
-  }
-  .mobile #basket a {
-    display: none;
-  }
-  .mobile #basket.stick-out {
-    top: 0;
-    -webkit-transition: top 250ms;
-    -moz-transition: top 250ms;
-    -o-transition: top 250ms;
-    transition: top 250ms;
   }
 }
