--- a/scss/marshall.scss
+++ b/scss/marshall.scss
@@ -2822,8 +2822,11 @@ h1 a {
     }
 }
 
-
-
+.desktop {
+    #backToTop {
+        display: none;
+    }
+}
 
 
 
@@ -2961,6 +2964,50 @@ h1 a {
             &:hover {
                 background: #0f82ff;
             }
+        }
+    }
+
+
+    #backToTop {
+        left: 0;
+        bottom: -45px;
+        border: none;
+        width: 100%;
+        height: 45px;
+        position: fixed;
+        background: #666;
+        text-align: right;
+
+        -webkit-transition: bottom 250ms;
+        -moz-transition: bottom 250ms;
+        -o-transition: bottom 250ms;
+        transition: bottom 250ms;
+
+        span {
+            color: #fff;
+            text-decoration: none;
+            padding: 6px 12px;
+            text-transform: uppercase;
+
+            .text {
+                display: inline-block;
+                vertical-align: middle;
+            }
+
+            span {
+                font-size: 1.9em;
+                font-weight: bold;
+                display: inline-block;
+            }
+        }
+
+        &.onScreen {
+            bottom: 0;
+
+            -webkit-transition: bottom 250ms;
+            -moz-transition: bottom 250ms;
+            -o-transition: bottom 250ms;
+            transition: bottom 250ms;
         }
     }
 
@@ -3526,6 +3573,75 @@ h1 a {
                 display: none;
             }
         }
+
+        #basket {
+            top: -76px;
+            left: 0;
+            border: none;
+            width: 100%;
+            height: 76px;
+            position: fixed;
+            overflow: inherit;
+            background: #fff;
+
+            -webkit-transition: top 250ms;
+            -moz-transition: top 250ms;
+            -o-transition: top 250ms;
+            transition: top 250ms;
+
+            -webkit-box-shadow: 0px 6px 5px -3px #575657;
+            -moz-box-shadow: 0px 6px 5px -3px #575657;
+            box-shadow: 0px 6px 5px -3px #575657;
+
+            .container {
+                width: 100%;
+
+                .summary-box {
+                    float: none;
+                    width: 100%;
+                    border: none;
+
+                    h3 {
+                        background: #e4e4e4;
+                        color: #000;
+                        padding: 5px 10px;
+                        margin: 5px 5px 0 5px;
+                    }
+
+                    .detail {
+                        min-height: inherit;
+                        border: 1px solid #ccc;
+                        position: relative;
+                        background: #fff;
+                        margin: 5px;
+
+                        strong {
+                            display: inline;
+                        }
+
+                        img {
+                            position: absolute;
+                            top: 5px;
+                            right: 10px;
+                        }
+                    }
+                }
+            }
+
+            a {
+                display: none;
+            }
+
+            &.stick-out {
+                top: 0;
+
+                -webkit-transition: top 250ms;
+                -moz-transition: top 250ms;
+                -o-transition: top 250ms;
+                transition: top 250ms;
+            }
+        }
+
     }
 
     /* mobile portrait */
@@ -3811,76 +3927,6 @@ h1 a {
             .add-options {
                 margin-top: 15px;
                 width: 167px;
-            }
-        }
-
-
-        #basket {
-            top: -76px;
-            left: 0;
-            bottom: 0;
-            border: none;
-            width: 100%;
-            height: 76px;
-            position: fixed;
-            overflow: inherit;
-            background: #fff;
-
-            -webkit-transition: top 250ms;
-            -moz-transition: top 250ms;
-            -o-transition: top 250ms;
-            transition: top 250ms;
-
-            -webkit-box-shadow: 0px 6px 5px -3px #575657;
-            -moz-box-shadow: 0px 6px 5px -3px #575657;
-            box-shadow: 0px 6px 5px -3px #575657;
-
-            .container {
-                width: 100%;
-
-                .summary-box {
-                    float: none;
-                    width: 100%;
-                    border: none;
-
-                    h3 {
-                        background: #e4e4e4;
-                        color: #000;
-                        padding: 5px 10px;
-                        margin: 5px 5px 0 5px;
-                    }
-
-                    .detail {
-                        min-height: inherit;
-                        border: 1px solid #ccc;
-                        position: relative;
-                        background: #fff;
-                        margin: 5px;
-
-                        strong {
-                            display: inline;
-                        }
-
-                        img {
-                            position: absolute;
-                            top: 5px;
-                            right: 10px;
-                        }
-                    }
-                }
-            }
-
-            a {
-                display: none;
-            }
-
-            &.stick-out {
-                top: 0;
-
-                -webkit-transition: top 250ms;
-                -moz-transition: top 250ms;
-                -o-transition: top 250ms;
-                transition: top 250ms;
             }
         }
     }
