--- a/scss/marshall.scss
+++ b/scss/marshall.scss
@@ -2788,6 +2788,22 @@ h1 a {
                 border-bottom: 3px solid $red;
                 font-weight: bold;
                 color: #444;
+
+                .btn_checkout {
+                    background: url('../images/btn-bgs.png') no-repeat;
+                    padding: 9px 13px 9px;
+                    display: block;
+                    color: $yellow;
+                    margin-top: 5px;
+                    font-family: Arial;
+                    font-weight: bold;
+                    font-size: 13px;
+                    line-height: 15px;
+                    border: 0;
+                    text-align: left;
+                    width: 91px;
+                    text-decoration: none;
+                }
             }
 
             strong {
@@ -2802,6 +2818,7 @@ h1 a {
                 display: block;
             }
         }
+
     }
 }
 
