--- a/scss/marshall.scss
+++ b/scss/marshall.scss
@@ -25,17 +25,18 @@
     display: block;
 }
 
-// Variables
+// variables
+$red: #bb1f1d;
+$yellow: #fff000;
 $darkblue: #001e5a;
 $darkerblue: #001848;
 $anotherblue: #001748;
-$yellow: #fff000;
-$red: #bb1f1d;
+$white: #ffffff;
+$lightgrey: #eeeeee;
 $grey: #ececec;
 $darkgrey: #cccccc;
-$black: #000000;
 $offblack: #444444;
-$white: #ffffff;
+$black: #000000;
 
 body {
 	margin: 0;
@@ -47,14 +48,8 @@ body {
     font-size: small;
 }
 
-a {
-
-}
-
-a:hover {
-
-}
-
+a {}
+a:hover {}
 /* -------------- resets ---------------------- */
 h1, h2, h3, h4, h5 {
     margin: 0;
@@ -894,7 +889,7 @@ h1 a {
 .news-page-navigation ul li a {
     display: block;
     background-color: $white;
-    border: 1px solid #eee;
+    border: 1px solid $lightgrey;
     color: #666;
     padding: 4px 5px;
     text-align: center;
@@ -1220,12 +1215,12 @@ h1 a {
 
                     &:hover {
                         background: #888;
-                        color: #EEE;
+                        color: $lightgrey;
                     }
 
                     &.selected {
                         background: #555;
-                        color: #EEE;
+                        color: $lightgrey;
 
                         &:hover {
                             background: #888;
@@ -2836,7 +2831,7 @@ h1 a {
 }
 
 .desktop {
-    #backToTop {
+    #back-to-top {
         display: none;
     }
 }
@@ -2973,15 +2968,13 @@ h1 a {
         }
     }
 
-
-    #backToTop {
+    #back-to-top {
         left: 0;
         bottom: -45px;
         border: none;
         width: 100%;
-        height: 45px;
+        height: 36px;
         position: fixed;
-        background: #666;
         text-align: right;
 
         -webkit-transition: bottom 250ms;
@@ -2989,22 +2982,22 @@ h1 a {
         -o-transition: bottom 250ms;
         transition: bottom 250ms;
 
+        color: #fff;
+        background: rgb(255, 255, 255);
+        background: rgba(255, 255, 255, 0.4);
+
         span {
             color: $white;
             text-decoration: none;
-            padding: 6px 12px;
-            text-transform: uppercase;
+            padding: 5px 6px;
+            font-size: 1.2em;
+            display: inline-block;
 
-            .text {
-                display: inline-block;
-                vertical-align: middle;
-            }
-
-            span {
-                font-size: 1.9em;
-                font-weight: bold;
-                display: inline-block;
-            }
+            position: absolute;
+            top: 5px;
+            right: 5px;
+            background: $black;
+            @include border-radius(3px);
         }
 
         &.onScreen {
@@ -3759,12 +3752,12 @@ h1 a {
 
                             &:hover {
                                 background: #888;
-                                color: #EEE;
+                                color: $lightgrey;
                             }
 
                             &.selected {
                                 background: #555;
-                                color: #EEE;
+                                color: $lightgrey;
 
                                 &:hover {
                                     background: #888;
